# ming-qiao

./: .agent-locks.json  .gitignore  .goosehints  .mcp.json  AGENT.md  AGENTS.md  AGENT_WORK.md  BACKEND_READY_FOR_TESTING.md  CLAUDE.md.bak.20260217104915  COUNCIL_CHAT.md  COUNCIL_CHAT.md.backup  COUNCIL_CHAT_ARCHIVE.md  COUNCIL_CHAT_NEW.md  COUNCIL_MESSAGE_TEST.md  Cargo.toml  ONBOARDING.md  README.md  SESSION_STATE_2026-01-27.md  TASK_LUBAN_DEBUG.md  goosehints  ming-qiao-council-chamber.toml  ming-qiao-laozi-jung.toml  ming-qiao-ogma.toml  ming-qiao-thales.toml  ming-qiao.example.toml  ming-qiao.toml
.agent-notes/: .gitkeep
.council/: config.yaml  ming-qiao-v02-nats-evolution.md  retro-2026-01-25-aleph-luban-coordination.md
.council/decisions/development/: 20260125-indexer-integration.md  20260127-git-repository-strategy.md
.council/schemas/: reflection-extension.yaml
agents/aleph/: CLAUDE.md
agents/luban/: AGENT.md
agents/thales/: CONTEXT.md
colloquium/: LUBAN_CHARTER.md  README.md  adapter.py  astrolabe_client.py  cast.py  com.astralmaris.council-dispatch.plist  council-dispatch.py  envelope.py  mingqiao.py  oracle_client.py  pipeline.py  pyproject.toml  test_gate.py  worktree-extract.py
colloquium/charters/: aleph.md  laozi-jung.md  luban.md  mataya.md  merlin.md  ogma.md  thales.md
config/: agent-capabilities.toml  council-keyring.json
crates/astrolabe-toolkit/: Cargo.toml
crates/astrolabe-toolkit/src/: dedup.rs  envelope.rs  ingest.rs  lib.rs  processor.rs
crates/astrolabe-toolkit/src/processors/: arxiv_pdf.rs  arxiv_url.rs  mod.rs  pdf_generic.rs  web_article.rs  x_post.rs
data/: events.jsonl
docs/: ARCHITECTURE.md  BUILDER_GUIDE.md  COLLOQUIUM_CONVENER.md  COLLOQUIUM_PROTOCOL.md  COMMUNICATION_GUIDE.md  COUNCIL_CHAMBER_DESIGN_BRIEF.md  COUNCIL_MAGNA_CARTA.md  DATABASE.md  DECISION_TRACES.md  DESIGN-persistence-classification.md  DESIGN-persistence-forge-integration.md  EVENTS.md  HTTP_API.md  INTEGRATION_TEST_REPORT.md  MCP_TOOLS.md  MERIDIAN-astrolabe-query-patterns.md  MERIDIAN-envelope-schema.md  MERLIN_THALES.md  OGMA-MING-QIAO-GUIDE.md  README.md  RECOVERY_RUNBOOK.md  TASK-ALEPH-agent-notifications.md  TASK-ALEPH-watcher-integration.md  TASK-LAOZI-JUNG-observation-prep.md  TASK-LUBAN-merlin-ui.md  TRACE_CAPTURE.md  UI_COMPONENTS.md  UI_TEST_REPORT.md  fleet-restart-runbook_1.md  golden-thread-instructions.md  golden-thread-instructions_2.md  mcp-server-task-aleph.md  ming-qiao.example.toml
docs/captains-log/: 2026-03-05.md  2026-03-06.md
docs/decisions/: 000-template.md  001-kit-deployment-feedback.md  002-latentwinds-automerge-schema.md  003-j2-intent-enforcement-debt.md
docs/designs/: agent-wake-architecture.md  jetstream-durable-delivery.md  meridian-design.md  sea-trial-remediation.md
docs/reviews/: 20260223-cocktail-party-review.md
health/: .gitignore
scripts/: agent-sync.sh  astrolabe-query.py  backup-council.sh  cocktail-check.sh  cocktail-idle-check.sh  cocktail-lib.sh  cocktail-listener.sh  cocktail-session-start.sh  cocktail-stop-check.sh  com.astralmaris.jikimi-healthd.plist  com.astralmaris.jikimi-watchdog.plist  council  generate-streamable-http-configs.py  health-check.sh  jikimi-healthd.sh  jikimi-watchdog.sh  merlin-env.sh  mq-inbox.sh  mq-send.sh  oracle  oracle-query.py  recovery-MCP-5.1.1.sh  recovery-agents-4.2.1.sh  recovery-capabilities-4.4.1.sh  recovery-nats.4.3.1.sh  recovery-wake-verification-5.3.1.sh  test-websocket.sh
scripts/security/: generate-agent-keys.sh  setup-surreal-creds.sh
scripts/wake/: wake-agent.sh
src/: lib.rs  main.rs
src/crypto/: envelope.rs  keyring.rs  mod.rs  nonce.rs  signing.rs
src/db/: error.rs  indexer.rs  mod.rs  models.rs  persistence.rs  state.rs  tests.rs
src/events/: error.rs  mod.rs  reader.rs  schema.rs  tests.rs  writer.rs
src/http/: auth.rs  handlers.rs  merlin.rs  mod.rs  routes.rs  server.rs  ws.rs
src/mcp/: mod.rs  protocol.rs  server.rs  streamable_http.rs  tools.rs
src/merlin/: mod.rs  notifier.rs
src/nats/: bridge.rs  client.rs  messages.rs  mod.rs  streams.rs  subjects.rs
src/state/: app_state.rs  config.rs  mod.rs
src/watcher/: actions.rs  config.rs  dispatch.rs  mod.rs  subjects.rs
tasks/: 000-template.md  001-event-schema-foundation.md  002-database-models.md  003-event-persistence.md  004-database-indexer.md  005-indexer-integration.md
tasks/2026-02-22/: TASK-ALEPH-watcher-integration.md
tasks/2026-02-23/: TASK-ALEPH-agent-notifications.md
ui/: package-lock.json  package.json  svelte.config.js  vite.config.ts
ui/src/: app.css
ui/src/lib/: api.ts  types.ts
ui/src/lib/components/: AgentStatusPanel.svelte  DecisionActions.svelte  DecisionCard.svelte  DecisionLog.svelte  InjectMessage.svelte  InterventionPanel.svelte  LiveStream.svelte  MerlinInput.svelte  MerlinNotificationStream.svelte  Message.svelte  ModeToggle.svelte  NotificationCenter.svelte  SearchBar.svelte  ThreadList.svelte  ThreadListEnhanced.svelte  ThreadView.svelte
ui/src/lib/stores/: config.svelte.ts  config.ts  merlinNotifications.svelte.ts  merlinNotifications.ts  messages.svelte.ts  messages.ts  threads.svelte.ts  threads.ts  websocket.svelte.ts  websocket.ts
ui/src/lib/types/: notifications.ts
ui/src/routes/: +layout.svelte  +page.svelte
