[package]
name = "ming-qiao"
version = "0.1.0"
edition = "2021"
description = "Communication bridge for the Council of Wizards"
license = "MIT"

[[bin]]
name = "ming-qiao"
path = "src/main.rs"

[lib]
name = "ming_qiao"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v7", "serde"] }
tokio = { version = "1", features = ["full"] }
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP server (Thales gateway)
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }

# WebSocket support
futures-util = { version = "0.3", default-features = false, features = ["sink"] }

# Configuration
toml = "0.8"

# NATS messaging
async-nats = "0.38"

# SurrealDB persistence
surrealdb = { version = "3", default-features = false, features = ["kv-mem", "protocol-ws", "rustls"] }

# HTTP client (watcher webhooks)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
