[package]
name = "ming-qiao"
version = "0.1.0"
edition = "2021"
description = "Communication bridge for the Council of Wizards"
license = "MIT"

[[bin]]
name = "ming-qiao"
path = "src/main.rs"

[[bin]]
name = "fleet-orchestrator"
path = "src/bin/fleet_orchestrator.rs"

[[bin]]
name = "wake-daemon"
path = "src/bin/wake_daemon.rs"

[[bin]]
name = "mcp-test-harness"
path = "src/bin/mcp_test_harness.rs"

[[bin]]
name = "daily-handover"
path = "src/bin/daily_handover.rs"

[[bin]]
name = "cve-sweep"
path = "src/bin/cve_sweep.rs"

[[bin]]
name = "generate-streamable-http-configs"
path = "src/bin/generate_streamable_http_configs.rs"

[[bin]]
name = "kimi-preflight-auth"
path = "src/bin/kimi_preflight_auth.rs"

[[bin]]
name = "colloquium-daemon"
path = "src/bin/colloquium_daemon.rs"

[[bin]]
name = "council-observer"
path = "src/bin/council_observer.rs"

[[bin]]
name = "am-comms"
path = "src/bin/am_comms.rs"

[[bin]]
name = "oracle-ingest"
path = "src/bin/oracle_ingest.rs"

[[bin]]
name = "am-fleet-metrics"
path = "src/bin/fleet_metrics.rs"

[[bin]]
name = "am-avatar"
path = "src/bin/am_avatar.rs"

[lib]
name = "ming_qiao"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v7", "serde"] }
tokio = { version = "1", features = ["full"] }
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP server (Thales gateway)
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }

# WebSocket support
futures-util = { version = "0.3", default-features = false, features = ["sink"] }

# Configuration
toml = "0.8"

# NATS messaging
async-nats = "0.38"

# SurrealDB persistence
surrealdb = { version = "3", default-features = false, features = ["kv-mem", "protocol-ws", "rustls"] }

# HTTP client (watcher webhooks)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }

# MCP protocol SDK (Streamable HTTP server transport)
rmcp = { version = "0.2", features = ["server", "transport-streamable-http-server", "transport-worker", "macros"] }
schemars = "0.8"
http = "1"

# SSE stream generation (Streamable HTTP MCP transport)
async-stream = "0.3"

# CLI + error handling (mcp-test-harness, fleet-orchestrator)
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"

# XML parsing (RustSec feed in CVE sweep)
quick-xml = "0.37"

# Regex (CVE sweep keyword matching)
regex = "1"

# Secure credential storage
keyring = "3"

# URL encoding
urlencoding = "2"

# Interactive line editor (am-comms human CLI)
rustyline = "15"

# Cryptographic signing — Security P0 (Ed25519 signed-event envelopes)
ed25519-dalek = { version = "2", features = ["rand_core"] }
sha2 = "0.10"
rand = "0.8"
hex = "0.4"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
